# SO

./: .gitignore  README.md
fms/: Cargo.toml  coverage.json  coverage.txt
fms-gui/: package-lock.json  package.json
fms-gui/src/: App.css  App.tsx
fms-gui/src-tauri/: Cargo.toml  tauri.conf.json
fms-gui/src-tauri/src/: lib.rs  main.rs
fms/src/: lib.rs  main.rs  monitor.rs  process.rs  stats.rs  tui.rs  ui.rs
fms/tests/: cli_test.rs  integration.rs
