[package]
name = "fms"
version = "0.1.0"
edition = "2024"

[dependencies]
console = "0.16.3"
dialoguer = "0.12.0"
indicatif = "0.18.4"
shlex = "1.3.0"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["process", "signal"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
] }
